--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet"/>
-        <title>HLS Stream</title>
-    </head>
-    <body>
-        <video id="my-video" class="video-js" autoplay muted loop preload="auto" width="640" height="264" data-setup='{autoplay: true}'>
-            <source src="http://localhost:8080/output.m3u8" type="application/x-mpegURL">
-        </video>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
+		<title>HLS Stream</title>
+	</head>
+	<body>
+		<video
+			id="my-video"
+			class="video-js"
+			autoplay
+			muted
+			loop
+			preload="auto"
+			width="640"
+			height="264"
+			data-setup="{autoplay: true}"
+		>
+			<source src="http://192.168.1.15:8080/output.m3u8" type="application/x-mpegURL" />
+		</video>
 
-        <video id="my-video2" class="video-js" autoplay muted loop preload="auto" width="640" height="264" data-setup='{autoplay: true}'>
-            <source src="http://localhost:8080/test.m3u8" type="application/x-mpegURL">
-        </video>
+		<video
+			id="my-video2"
+			class="video-js"
+			autoplay
+			muted
+			loop
+			preload="auto"
+			width="640"
+			height="264"
+			data-setup="{autoplay: true}"
+		>
+			<source src="http://192.168.1.15:8080/test.m3u8" type="application/x-mpegURL" />
+		</video>
 
-        <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
-    </body>
+		<script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
+	</body>
 </html>
